Switch to G1GC in build.sh